--- a/assets/package.json
+++ b/assets/package.json
@@ -16,14 +16,20 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "live_react": "file:../deps/live_react",
+    "lucide-react": "^0.477.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "phoenix_live_view": "file:../deps/phoenix_live_view",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.9",
+    "tailwindcss-animate": "^1.0.7",
     "topbar": "^2.0.2"
   }
 }
